[PATCH 096/123] [viz] use microseconds on time axes everywhere + cleanups + fixes in index.html + IPC graphs are now aligned with the graphs above

--- a/tools/viz/rickshaw/src/css/extensions.css
+++ b/tools/viz/rickshaw/src/css/extensions.css
@@ -89,21 +89,21 @@ div, span, p, td {
 	padding: 0;
 }
 
-#ipclegend {
+.ipclegend {
 	background-color: white;
 	margin-left: 0;
 	padding: 0;
 	left: 0;
 }
 
-#ipclegend .label {
+.ipclegend .label {
 	color: #404040;
 }
-#ipclegend .action {
+.ipclegend .action {
 	color: black;
 	opacity: 0.5;
 }
-#ipclegend ul {
+.ipclegend ul {
 	padding: 0;
 }
 
